fix: :bug: correct use case diagram formatting in architecture documentation for consistency

--- a/doc4+1.html
+++ b/doc4+1.html
@@ -1293,7 +1293,7 @@
                     e historias clínicas.
                 </p>
                 <div class="diagram-container">
-                    <pre class="use-case-diagram"><code>                    ┌─────────────────────────────────────────────┐
+                    <pre class="use-case-diagram"><code>                    ┌────────────────────────────────────────────┐
                     │      CLINICAL SERVICE                      │
                     │                                            │
                     │  ┌───────────────────────────────────────┐ │
@@ -1344,7 +1344,7 @@
                     y reportes de pacientes.
                 </p>
                 <div class="diagram-container">
-                    <pre class="use-case-diagram"><code>                    ┌─────────────────────────────────────────────┐
+                    <pre class="use-case-diagram"><code>                    ┌────────────────────────────────────────────┐
                     │      GENOMIC SERVICE                       │
                     │                                            │
                     │  ┌───────────────────────────────────────┐ │
