refactor: :recycle: rename scenario section and improve heading structure in architecture documentation for better clarity

--- a/doc4+1.html
+++ b/doc4+1.html
@@ -527,9 +527,9 @@
                 </table>
             </section>
 
-            <section id="descripcion-escenarios" class="section">
+            <section id="escenarios" class="section">
                 <h2>5. Escenarios (+1)</h2>
-                <h3>5.1 Descripción General</h3>
+                <h3 id="descripcion-escenarios">5.1 Descripción General</h3>
                 <p>Los escenarios muestran como interactuan los componentes del sistema para cumplir tareas clave. Cada
                     caso ilustra un flujo que combina las vistas lógica, de procesos, desarrollo y física dentro de Geno
                     Sentinel.</p>
